# eBPF-Rust-demo

./: README.md
ebpf-sentinel/: .gitignore  AGENTS.md  Cargo.toml  README.md
ebpf-sentinel/crates/sentinel-agent/: Cargo.toml
ebpf-sentinel/crates/sentinel-agent/src/: main.rs
ebpf-sentinel/crates/sentinel-anomaly/: Cargo.toml
ebpf-sentinel/crates/sentinel-anomaly/src/: main.rs
ebpf-sentinel/crates/sentinel-common/: Cargo.toml
ebpf-sentinel/crates/sentinel-common/src/: lib.rs
ebpf-sentinel/crates/sentinel-ebpf/: Cargo.toml  README.md
ebpf-sentinel/crates/sentinel-ebpf/src/: main.rs
ebpf-sentinel/docs/: architecture.md  event-schema.md  milestones.md  testing.md
ebpf-sentinel/scripts/: smoke-events.sh
