[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aya = "0.14"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sentinel-common = { path = "../sentinel-common" }
